docs/i18n/cs/docusaurus-plugin-content-docs/version-1.4/shortcuts.md
---
title: "Zkratky"
sidebar_position: 2
---

Existuje několik zkratek, které můžete použít v editoru. Některé z nich jsou zapsány pod tlačítky.

## Obecná ustanovení

* `Ctrl` + `N`: Nový soubor
* `Ctrl` + `Shift` + `N`: Nový soubor ze šablony
* `Ctrl` + `O`: Otevřít soubor
* `Ctrl` + `I`: Importovat soubor
* `Ctrl` + `E`: Exportovat soubor
* `Ctrl` + `Shift` + `E`: Exportovat soubor jako obrázek
* `Ctrl` + `Alt` + `E`: Exportovat soubor jako svg
* `Ctrl` + `Alt` + `S`: Otevřít nastavení

## Projekt

* `Ctrl` + `Z`: Vrátit zpět
* `Ctrl` + `Y`: Znovu
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Otevřít nastavení projektu
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Otevřít dialog barevné palety
* `Ctrl` + `B`: Otevřít dialog na pozadí
* `Ctrl` + `Shift` + `A`: dialogové okno
* `Ctrl` + `L`: Otevřené vrstvy
* `Ctrl` + `S`: Uložit
* `Alt` + `S`: Změna cesty

## Stylus

* `Primární tlačítko`: Přepnout na ruční nástroj
* `Sekundární tlačítko`: Změnit na druhou malbu
